<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="save_path"
        android:title="@string/save_path"
        android:defaultValue="PixivDownloads"/>
    <ListPreference
        android:key="file_format"
        android:title="@string/file_format"
        android:entries="@array/file_format_entries"
        android:entryValues="@array/file_format_values"
        android:defaultValue="TXT"/>
    <SwitchPreferenceCompat
        android:key="open_folder"
        android:title="@string/open_folder"
        android:defaultValue="true"/>
    <ListPreference
        android:key="language"
        android:title="@string/language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="zh"/>
</PreferenceScreen>
