<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tvTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_light"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="8dp"/>

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_switch"
        android:layout_marginBottom="24dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/etSavePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save_path"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_apply"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>
</LinearLayout>
